# network-code

./: .dockerignore  .gitignore  AWS_PILOT_DEPLOYMENT_PLAN_2026-07-06.md  CLOSED_LOOP_RCA_TO_NETCODE_PLAN_2026-07-07.md  Dockerfile  GTM_GO_LIVE_PLAN_2026-07-06.md  GTM_LAUNCH_PLAN_2026-07-06.md  NETCODE_FULL_FEATURE_PARITY_PLAN_2026-07-08.md  PHASED_BUILD_PLAN_CLOSED_LOOP_2026-07-07.md  README.md  UNIFIED_PLATFORM_BUILD_PLAN_2026-07-07.md  netcode-launch-plan.md  network-as-code-phase0-plan.md  network-as-code-platform-plan.md  network-as-code-platform-roadmap-v2.md  network-as-code-platform-roadmap.md  network-as-code-saas-launch-plan.md  pyproject.toml
docs/: ARISTA_MVP_UI.md  AWS_PILOT_READINESS_RUNBOOK_2026-07-08.md  CHANGELOG_2026-07-03_MVP_UI.md  FAILURE_DOMAINS.md  NETCODE_MARCUS_P0_P2_EXECUTION_PLAN_2026-07-12.md  NETCODE_MARCUS_P0_P2_VALIDATION_2026-07-12.md  NETCODE_NAUTOBOT_DIFFERENCES_AND_GAP_PLAN_2026-07-12.md  NETCODE_REZ_FULL_LOOP_CERTIFICATION_2026-07-08.md  NETCODE_SHELL_AND_E2E_VALIDATION_2026-07-09.md  NETCODE_SIMPLE_AUTOMATION_UX_PLAN_2026-07-08.md  R12_MULTI_VENDOR_CAPABILITY_EVIDENCE_2026-07-14.md  R5_CONNECTOR_RELIABILITY_EVIDENCE_2026-07-14.md  REZONANCE_COMMUNITY_WINDOWS_LAUNCH_PLAN_2026-07-12.md  REZONANCE_OPERATIONAL_SOURCE_OF_TRUTH_PLAN_2026-07-12.md  REZONANCE_OPERATIONAL_SOURCE_OF_TRUTH_VALIDATION_2026-07-12.md  SECURITY_WHITEPAPER.md  SHELL_DEVICE_CATALOG_POC_CERTIFICATION_2026-07-09.md  SHELL_TRANSCRIPT_HISTORY_CERTIFICATION_2026-07-10.md
inventories/: lab.yaml
netcode/: __init__.py  ai_assistant.py  ansible_backend.py  api.py  auth.py  (+56 more)
(+217 files in other folders)
